--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "websocket-copy",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "main": "server.js",
+  "type": "module",
   "dependencies": {
-    "ws": "^8.18.3"
+    "ws": "^8.14.2"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
+
